logs/Slang/generated/hdlconv/hdlconvertor_p339.sv.log
name: hdlconvertor_p339
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p339.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p339.sv:2:2: error: language feature not yet supported
	clocking dram @(clk);
	^~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p339.sv:7:2: error: language feature not yet supported
	clocking cd1 @(posedge phi1);
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
